--- a/plugin.xml
+++ b/plugin.xml
@@ -19,4 +19,14 @@
         <header-file src="src/ios/PhoneDialer.h"/>
         <source-file src="src/ios/PhoneDialer.m"/>
     </platform>
+    <platform name="android">
+        <config-file target="res/xml/config.xml" parent="/*">
+            <feature name="PhoneDialer">
+                <param name="android-package" value="com.teamnemitoff.PhoneDialer"/>
+            </feature>
+        </config-file>
+        <source-file 
+            src="src/android/PhoneDialer.java" 
+            target-dir="src/com/teamnemitoff/phonedialer"/>
+    </platform>
 </plugin>
