Seems like Feature is required

--- a/plugin.xml
+++ b/plugin.xml
@@ -20,6 +20,11 @@
         <source-file src="src/ios/PhoneDialer.m"/>
     </platform>
     <platform name="android">
+        <config-file target="res/xml/config.xml" parent="/*">
+            <feature name="PhoneDialer">
+                <param name="android-package" value="com.teamnemitoff.phonedialer.PhoneDialer"/>
+            </feature>
+        </config-file>
         <config-file target="AndroidManifest.xml" parent="/*">
             <uses-permission android:name="android.permission.CALL_PHONE" />
         </config-file>
